lintian (2.5.28) UNRELEASED; urgency=medium

  XXX: generate tag summary with private/generate-tag-summary

  * lib/Lintian/Command.pm:
    + [NT] Add support for running a sub in the child before
      it calls exec.

 -- Niels Thykier <niels@thykier.net>  Sun, 14 Sep 2014 08:55:45 +0200

lintian (2.5.27) unstable; urgency=medium

  * Summary of tag changes:
    + Added:
      - bad-exception-format-in-dep5-copyright
      - changed-by-address-is-root-user
      - exclusive-runtime-tests-field
      - maintainer-address-is-root-user
      - source-contains-prebuilt-doxygen-documentation
      - uploader-address-is-root-user
      - useless-autogenerated-doxygen-file

  * checks/cruft.pm:
    + [BR] Fix a few false positives is for javascript source-is-missing.
    + [BR] Detect prebuilt doxygen documentation.
  * checks/fields.pm:
    + [JW] Fix incorrectly anchored regexps.  (Closes: #760987)
  * checks/files.pm:
    + [BR] Detect useless doxygen generated file.  (Closes:  #751945)
  * checks/manpages.desc:
    + [BR] Improve documentation of manpage-has-errors-from-man.
      (Closes: #757068).
  * checks/menu-format.pm:
    + [BR] Fix a false positive in desktop-mime-but-no-exec-code.
      (Closes: #760677).
  * checks/source-copyright.pm:
    + [BR] Fix false positive for space-in-std-shortname-in-dep5-copyright
      with alternative licenses.  (Closes: #760642).
    + [BR] Fix false positive for with exception syntax.
    + [BR] Fix false positive of 
      wildcard-matches-nothing-in-dep5-copyright.  (Closes: 761125)
  * checks/testsuite.{desc,pm}:
    + [BR] Fix false positive missing-runtime-tests-field.
      (Closes: #760714).
    + [BR] Print line in case of error.

  * data/fields/metapackages:
    + [BR] Add qt4-default and qt5-default as metapackage.
      (Closes: #756158).

  * lib/Lintian/Check.pm:
    + [BR] Detect package being built as user root.
      (Closes: #612583).

 -- Niels Thykier <niels@thykier.net>  Sat, 13 Sep 2014 22:48:36 +0200
